--- a/trello-api-autoamtion/build.gradle
+++ b/trello-api-autoamtion/build.gradle
@@ -15,12 +15,11 @@ dependencies {
     implementation 'io.cucumber:cucumber-java:7.11.2'
     implementation 'io.cucumber:cucumber-gherkin:7.11.2'
 
-    testImplementation 'io.cucumber:cucumber-junit:7.11.2'
+    implementation 'io.cucumber:cucumber-testng:7.11.2'
+    testImplementation 'io.cucumber:cucumber-picocontainer:7.11.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testImplementation project(path: ':core-api-autoamtion')
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
