--- a/core-api-autoamtion/build.gradle
+++ b/core-api-autoamtion/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
 
+    testImplementation 'io.rest-assured:json-schema-validator:5.3.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
